# opencvLicensePlateOCR

./: .gitignore  Makowski_Konrad.py  README.md  output.json  pyproject.toml  requirements.txt  tq
licensePlateOCR/: main.py  patternMatch.py
