[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "licensePlateOCR"
authors = [
    {name = "Konrad Makowski"}
]
description = "package desc"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "opencv-contrib-python",
    "numpy",
]
